# fast_wannier

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/BaTiO3/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
data/BrNa/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
data/FLi/: amn.fdat  dimensions.fdat  mmn.fdat  w_list.fdat
data/GaAs/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
data/He/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
data/Si/: amn.fdat  mmn.fdat  w_list.fdat
data/SiH4/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
si_data/: amn.fdat  dimensions.fdat  kplusb.fdat  mmn.fdat  w_list.fdat
src/: main.f90  optimizer.f90  oracles.f90  param_parser.f90  zgpadm.f90
tex/: main.tex
